dabjeongneo/src/main/kotlin/com/example/studykotlin/global/error/exception/DabjeongneoException.kt
package com.example.studykotlin.global.error.exception

open class DabjeongneoException(val errorCode : ErrorCode): RuntimeException() {

}